Updating about section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </h1>
 
           <div class="hero-section-sub-heading">
-            I am a <span class="role"></span>
+            a <span class="role"></span>
           </div>
 
           <p class="hero-section-description">
@@ -772,7 +772,7 @@ Let's connect and explore how we can leverage data to drive meaningful change!ðŸ
       var typed = new Typed(".role", {
         strings: [
           " Data Analyst",
-          " Machine Learning Enginner",
+          " Machine Learning Engineer",
           " Data Scientist"
         ],
         smartBackspace: true,
