--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
           <div class="btn-pink" id="btn"> 
             <i class="fa fa-download" aria-hidden="true"></i> 
-            <a href="Rishav_AIML_Eng_3+_Years.pdf" download="Rishav_AIML_Eng_3+_Years.pdf" style="color: white">Download Resume </a>
+            <a href="Rishav_Kumar_AI_ML_3.5+_Years.pdf" download="Rishav_Kumar_AI_ML_3.5+_Years.pdf" style="color: white">Download Resume </a>
 
             </div>
 
